<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sagar_patel.sagarkumarpatel_comp304lab2.MainScreen"
    android:background="#38882a">



        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maintitle"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="50dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="196dp"
        app:srcCompat="@drawable/bookstore"
        android:id="@+id/imageView"
        android:contentDescription="@string/title"
        android:layout_below="@+id/maintitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp" />

    <Button
        android:text="@string/enter_button"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_button"
        android:contentDescription="@string/enter_button_desc"
        android:textSize="20sp"
        android:textAlignment="center"

        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        />


</RelativeLayout>
