<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sagar_patel.sagarkumarpatel_comp304lab2.Payment"
    android:background="#38882a">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="fill">

            <TextView
                android:text="@string/cus_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="47dp"
                android:id="@+id/textView"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/full_name"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"

                android:hint="@string/cus_name"
                android:ems="10"
                android:id="@+id/full_name"
                android:layout_alignBaseline="@+id/textView"
                android:layout_alignBottom="@+id/textView"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/background_light"
                android:layout_marginLeft="10dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center">

            <TextView
                android:text="@string/cus_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_below="@+id/full_name"
                android:layout_toStartOf="@+id/cus_address"
                android:layout_marginTop="16dp"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/cus_address"
                android:ems="10"
                android:id="@+id/cus_address"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:textColor="@android:color/background_light"
                android:layout_marginLeft="10dp"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="fill"
            android:textAlignment="center">

            <TextView
                android:text="@string/items_ordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:id="@+id/textView3"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="@android:color/background_light"
                android:layout_below="@+id/cus_address"
                android:layout_toStartOf="@+id/cus_address"
                android:textAlignment="textEnd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:id="@+id/ordered_items"
                android:textSize="12sp"
                android:textColor="@android:color/background_light"
                android:textAlignment="viewStart"
                android:layout_toRightOf="@+id/textView3"
                android:layout_height="wrap_content"
                android:textStyle="normal|italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center">

            <TextView
                android:text="@string/Credit_Card_Number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:id="@+id/textView5"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_below="@+id/textView3"
                android:layout_alignEnd="@+id/textView3"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/Credit_Card_Number"
                android:id="@+id/credit_card_number"
                android:textSize="18sp"
                android:layout_alignBottom="@+id/textView5"
                android:layout_toEndOf="@+id/ordered_items"
                android:layout_alignStart="@+id/cus_address"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center">

            <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_marginTop="26dp"
                android:textSize="18sp"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:layout_below="@+id/textView5"
                android:layout_alignEnd="@+id/textView5"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:layout_below="@+id/credit_card_number"
                android:layout_alignStart="@+id/credit_card_number"
                android:layout_marginTop="12dp"
                android:id="@+id/editText3"
                android:hint="mm/yy"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center">

            <TextView
                android:text="@string/CCV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText3"
                android:layout_alignEnd="@+id/textView7"
                android:layout_marginTop="25dp"
                android:id="@+id/textView8"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:textSize="18sp"
                android:textAlignment="textEnd" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/CCV"
                android:layout_below="@+id/editText3"
                android:layout_alignStart="@+id/editText3"
                android:layout_marginTop="14dp"
                android:id="@+id/ccv"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill"
            android:textAlignment="center">

            <Button
                android:text="@string/pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pay"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/textView3" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
